[Fix] Remove location and add lat long to events
