# docs/swagger.json
@@ -247,13 +247,6 @@
                     },
                     {
                         "type": "string",
-                        "example": "loc_a,loc_b",
-                        "description": "Event locations",
-                        "name": "locations",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "Event price start",
                         "name": "price_start",
                         "in": "query"
@@ -346,10 +339,14 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "name": "location",
-                        "in": "formData",
-                        "required": true
+                        "type": "number",
+                        "name": "lat",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "number",
+                        "name": "long",
+                        "in": "formData"
                     },
                     {
                         "type": "string",
@@ -471,8 +468,7 @@
                     {
                         "type": "integer",
                         "name": "age_limit",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     },
                     {
                         "type": "integer",
@@ -488,8 +484,7 @@
                         "collectionFormat": "csv",
                         "description": "Example: cat1,cat2",
                         "name": "categories",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     },
                     {
                         "type": "string",
@@ -500,8 +495,7 @@
                     {
                         "type": "string",
                         "name": "dress_code",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     },
                     {
                         "type": "string",
@@ -511,10 +505,14 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "name": "location",
-                        "in": "formData",
-                        "required": true
+                        "type": "number",
+                        "name": "lat",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "number",
+                        "name": "long",
+                        "in": "formData"
                     },
                     {
                         "type": "string",
@@ -525,8 +523,7 @@
                     {
                         "type": "string",
                         "name": "organizer",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     },
                     {
                         "type": "number",
@@ -642,140 +639,6 @@
                     {
                         "type": "string",
                         "description": "Event ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/payload.GeneralResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/locations": {
-            "get": {
-                "description": "Get locations",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "locations"
-                ],
-                "summary": "Get locations",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Location level",
-                        "name": "level",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/payload.GetLocationsResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a new location",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "locations"
-                ],
-                "summary": "Create a new location",
-                "parameters": [
-                    {
-                        "description": "Create Location",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/payload.CreateLocationRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/payload.CreateResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/locations/{id}": {
-            "put": {
-                "description": "Update a location",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "locations"
-                ],
-                "summary": "Update a location",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Location ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Update Location",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/payload.UpdateLocationRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/payload.GeneralResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a location",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "locations"
-                ],
-                "summary": "Delete a location",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Location ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -1056,11 +919,17 @@
                     "type": "string"
                 },
                 "image_url": {
-                    "description": "non-mandatory fields",
                     "type": "string"
                 },
-                "location": {
-                    "type": "string"
+                "is_online": {
+                    "type": "boolean"
+                },
+                "lat": {
+                    "description": "non-mandatory fields",
+                    "type": "number"
+                },
+                "long": {
+                    "type": "number"
                 },
                 "name": {
                     "type": "string"
@@ -1082,39 +951,6 @@
                 },
                 "total_likes": {
                     "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Level": {
-            "type": "string",
-            "enum": [
-                "country",
-                "state",
-                "city"
-            ],
-            "x-enum-varnames": [
-                "Country",
-                "State",
-                "City"
-            ]
-        },
-        "models.Location": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "level": {
-                    "$ref": "#/definitions/models.Level"
-                },
-                "name": {
-                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
@@ -1198,21 +1034,6 @@
                 }
             }
         },
-        "payload.CreateLocationRequest": {
-            "type": "object",
-            "required": [
-                "level",
-                "name"
-            ],
-            "properties": {
-                "level": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "payload.CreateResponse": {
             "type": "object",
             "properties": {
@@ -1251,17 +1072,6 @@
                 }
             }
         },
-        "payload.GetLocationsResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Location"
-                    }
-                }
-            }
-        },
         "payload.GetReviewsResponse": {
             "type": "object",
             "properties": {
@@ -1293,17 +1103,6 @@
                 "name"
             ],
             "properties": {
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "payload.UpdateLocationRequest": {
-            "type": "object",
-            "properties": {
-                "level": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 }
