# models/event.go
@@ -12,15 +12,17 @@ type Event struct {
 	EndTime     time.Time          `bson:"end_time" json:"end_time"`
 	Name        string             `bson:"name" json:"name"`
 	Description string             `bson:"description" json:"description"`
-	Location    string             `bson:"location" json:"location"`
 	Price       float32            `bson:"price" json:"price"`
 	Capacity    int32              `bson:"capacity" json:"capacity"`
+	ImageURL    string             `bson:"image_url" json:"image_url"`
+	IsOnline    bool               `bson:"is_online" json:"is_online"`
 	// non-mandatory fields
-	ImageURL   string `bson:"image_url" json:"image_url"`
-	Organizer  string `bson:"organizer" json:"organizer"`
-	DressCode  string `bson:"dress_code" json:"dress_code"`
-	AgeLimit   int    `bson:"age_limit" json:"age_limit"`
-	TotalLikes int    `bson:"total_likes" json:"total_likes"`
+	Lat        float64 `bson:"lat" json:"lat"`
+	Long       float64 `bson:"long" json:"long"`
+	Organizer  string  `bson:"organizer" json:"organizer"`
+	DressCode  string  `bson:"dress_code" json:"dress_code"`
+	AgeLimit   int     `bson:"age_limit" json:"age_limit"`
+	TotalLikes int     `bson:"total_likes" json:"total_likes"`
 	// relational fields
 	Categories   []string `bson:"categories" json:"categories"`
 	Participants []string `bson:"participants" json:"participants"`
